--- a/index.css
+++ b/index.css
@@ -617,6 +617,31 @@ button:focus {
     box-shadow: 0px 0px 6px 4px rgba(230, 196, 196, 0.3);
 }
 
+#perc {
+    color: white;
+    background-color: #424242;
+    opacity: .6;
+    border: 2px solid teal;
+    padding: 5px 30px;
+    position: fixed;
+    top: 10px;
+    right: 1%;
+    border-radius: 20px;
+    z-index: 3;
+    font-weight:900;
+    font-size: 1.3rem;
+}
+#scrtop{
+    color: white;
+    background-color: #424242;
+    border: 2px solid teal;
+    padding: 5px 5px;
+    position: fixed;
+    bottom: 0%;
+    right: 0%;
+    border-radius: 50%;
+    opacity: .6;
+}
 
 /* common margin */
 .mb75px {
@@ -682,6 +707,11 @@ button:focus {
     #about p{
         width: 90%;
         padding: 13px 60px;
+    }
+    #perc {
+        top: 37px;
+        padding: 3px 40px;
+        
     }
     /* header section ends here */
     #skills h1 span {
@@ -756,6 +786,7 @@ button:focus {
     #portfolio h1 {
         font-size: 1.5rem;
     }
+
     
 
     /* contact */
@@ -789,6 +820,12 @@ nav ul li.dropdownicon {
     nav h1 {
         margin-left: 24%;
     }
+    #perc {
+        top: 37px;
+        padding: 1px 20px;
+        font-size: 0.7rem;
+        
+    }
     .icons {
         margin-left: -6%;
     }
@@ -796,15 +833,15 @@ nav ul li.dropdownicon {
         font-size: 1.5rem;
     }
     .skills-display {
-        margin-left: 30%;
+        margin-left: 0%;
     }
     .skill-bar {
         margin-bottom: 10%;
     }
     #timeline-divider {
         height: 64%;
-        top: 476%;
-        left: 12.5%;
+        top: 505%;
+        left: 13.5%;
     }
     #education-timeline-divider {
         left: 9%;
