--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
     margin-top: -20px;
     padding: 0px;
     background-color: #f6f6f6;
+    max-width: 100%;
 }
 
 section {
@@ -42,14 +43,21 @@ section:nth-child(2n+1){
 }
 /* nav starts */
 nav {
-    margin-left: 14%;
+    /* margin-left: 14%; */
     position: sticky;
     top: 10px;
     margin-top: 0px;
 }
+.nav{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
 nav ul li {
     list-style: none;
-    display: inline-block;
+    /* display: inline-block; */
     
 }
 nav ul li a {
@@ -71,21 +79,33 @@ nav ul li a:hover {
 }
 /* navbar ends */
 nav h1 {
+    margin: auto;
+    display: block;
+    width: 34%;
+    text-align: center;
+    margin-top: 136px;
+    margin-bottom: 110px;
+    font-size: 3rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #f6f6f6;
-    font-size: 3rem;
-    opacity: 1;
-    display: inline-block;
-    margin-left: 22.5%;
-    margin-top: 20%;
-    background-color:rgb(76, 168, 168) ;
-    border : 4px solid rgb(76, 168, 168) ;
+    background-color: rgb(76, 168, 168);
+    border: 4px solid rgb(76, 168, 168);
     border-radius: 23px;
     padding: 0px 8px;
 }
-.icons {
+/* .icons {
     margin-left: 9%;
+} */
+
+.icons {
+    margin: auto;
+    /* margin-left: -58%; */
+    display: flex;
+    justify-content: space-evenly;
+    margin-right: 196px;
+    margin-left: 120px;
 }
+
 nav ul.icons li a {
     background-color: white;
     color: black;
@@ -93,11 +113,12 @@ nav ul.icons li a {
     border-radius: 50%;
     font-size: 1.5rem;
     margin-left: 1.1px;
+    padding: 14px;
 }
 
-.second-list {
+/* .second-list {
     margin-left: 18%;
-}
+} */
 
 nav ul.icons li a:hover  {
     box-shadow: 0px 0px 6px 4px rgba(230, 196, 196, 0.9);
@@ -115,6 +136,9 @@ div.profile-img img {
     border-radius: 50%;
     position: relative;
     margin-left: -13px;
+}
+#about{
+    margin-bottom: 10px;
 }
 
 #about p {
@@ -162,6 +186,10 @@ b {
     flex-wrap: wrap;
     justify-content: space-between;
 } */
+
+#skills{
+    padding: 50px 0px;
+}
 
 #skills h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -306,11 +334,12 @@ width: 60%;
 /* experience */
 
 #experience {
-    height: auto;
+    max-height: 163vh;
     width: 95%;
     margin: auto;
     border: 2px double rgba(0, 159, 74, 1);
     padding: 10px;
+    padding-top: 40px;
 }
 
 #experience-container {
@@ -349,11 +378,16 @@ position: absolute;
     background-color: rgba(0, 159, 74, 1);
 }
 #timeline-divider {
-    position: absolute;
+    /* position: absolute;
     height: 75%;
     width: 0;
     top: 1677px;
-    left: 640px;
+    left: 640px; */
+    position: relative;
+    top: -457px;
+    height: 381px;
+    left: 149px;
+    width: 0px;
     border: 1px dashed rgba(0, 159, 74, 1);
 }
 
@@ -365,11 +399,13 @@ position: absolute;
 /* Eduation Starts here */
 
 #education {
-    height: 200vh;
+    /* height: 200vh; */
     width: auto;
     margin: 5px;
     border: 4px double rgba(0, 159, 74, 1);
     padding: 10px;
+    margin-top: -303px;
+    padding-bottom: 188px;
 }
 #education-container {
     position: relative;
@@ -666,6 +702,11 @@ button:focus {
         width: 100%;
         font-size: 0.8rem;
         margin: auto;
+        margin-top: 20px;
+    }
+    nav ul{
+        display: block !important;
+        padding: 0px;
     }
     nav ul li a:hover {
         padding: 10px;
@@ -690,26 +731,35 @@ button:focus {
         font-size: 1.7rem;
         opacity: 1;
         display: inline-block;
+        width: 62%;
         margin-left: 34%;
         margin-top: 20%;
         background-color:rgb(76, 168, 168) ;
         border : 4px solid rgb(76, 168, 168) ;
         border-radius: 23px;
-        padding: 0px 8px;
+        padding: 6px 10px;
     }
     nav ul.icons li a {
         font-size: 1rem;
         margin-left: 50%;
+    }
+
+    ul.icons{
+        display: flex !important;
+        margin: auto;
+        justify-content: center;
+        margin-left: -36px;
     }
     .icons {
         margin-left: 11%;
     }
     #about p{
         width: 90%;
-        padding: 13px 60px;
+        padding: 13px 16px;
     }
     #perc {
         top: 37px;
+        right: 16px;
         padding: 3px 40px;
         
     }
@@ -721,6 +771,10 @@ button:focus {
         font-size: 0rem;
     }
     /* experiecc */
+    #experience{
+        zoom: 80%;
+        max-height: 86vh;
+    }
     #experience-box {
         height: auto;
         width: 70%;
@@ -750,15 +804,19 @@ button:focus {
         background-color: rgba(0, 159, 74, 1);
     }
     #timeline-divider {
-        height: 64%;
-        top: 300%;
-        left: 14.5%;    
+        top: -430px;
+        left: 45px;
+        height: 368px;   
     }
     #experience h1 {
         font-size: 1.5rem;
     }
     
     /* education part starts right here */
+    #education{
+        margin-top: 0px;
+        zoom: 69%;
+    }
     #education h1 {
         font-size: 1.5rem;
     }
@@ -768,6 +826,9 @@ button:focus {
         width: 80%;
         margin: 3px;
         left: 25%;
+    }
+    #education-box p{
+        width: 87%;
     }
     #education-box:nth-child(2n) {
         left: 25%;
@@ -785,6 +846,7 @@ button:focus {
     /* portfolio */
     #portfolio h1 {
         font-size: 1.5rem;
+        margin: auto;
     }
 
     
@@ -803,6 +865,9 @@ button:focus {
     #contact-form-container {
         margin-bottom: 20%;
     }
+    #contact-form button[type = 'submit']{
+        margin: auto;
+    }
 }
 nav ul li.dropdownicon {
     display: none;
@@ -818,7 +883,7 @@ nav ul li.dropdownicon {
     }
     
     nav h1 {
-        margin-left: 24%;
+        margin-left: 18%;
     }
     #perc {
         top: 37px;
@@ -839,9 +904,9 @@ nav ul li.dropdownicon {
         margin-bottom: 10%;
     }
     #timeline-divider {
-        height: 64%;
-        top: 505%;
-        left: 13.5%;
+        top: -430px;
+        left: 45px;
+        height: 368px;
     }
     #education-timeline-divider {
         left: 9%;
@@ -883,4 +948,28 @@ nav ul li.dropdownicon {
         text-align: left;
     }
 
+}
+
+
+@media screen and (max-width: 320px) {
+    div.profile-img img{
+        height: 170px;
+        width: 170px;
+    }
+    nav h1{
+        width: 66%;
+        margin-left: 41px;
+        margin-bottom: 79px;
+    }
+    #about p{
+        padding: 13px 22px;
+    }
+    #timeline-divider{
+        top: -498px;
+        left: 40px;
+        height: 399px;
+    }
+    #experience{
+        max-height: 110vh;
+    }
 }
