--- a/index.css
+++ b/index.css
@@ -772,13 +772,17 @@ button:focus {
     }
     /* experiecc */
     #experience{
-        zoom: 80%;
-        max-height: 86vh;
+        zoom: 75%;
+        max-height: 100vh;
+        width: 93%;
     }
     #experience-box {
         height: auto;
         width: 70%;
         left: 25%;
+    }
+    #experience-box p{
+        width: 80%;
     }
     #experience-box:nth-child(2n){
         left: 25%;
@@ -904,9 +908,9 @@ nav ul li.dropdownicon {
         margin-bottom: 10%;
     }
     #timeline-divider {
-        top: -430px;
-        left: 45px;
-        height: 368px;
+        top: -505px;
+    left: 45px;
+    height: 415px;
     }
     #education-timeline-divider {
         left: 9%;
